# CSD2

./: CMakeLists.txt  README.md  ad
C++2b/: CppPointerTutorial  CppPointerTutorial.cpp
C++2b/Instrument Class/: README  factorization.cpp  firstTry  instrument.cpp  instrument.h
C++2b/Instrument_Heritage/: bass.cpp  bass.h  instrument.cpp  instrument.h  playInstrument  playMain.cpp  violin.cpp  violin.h
C++2b/Pointers/: basic_pointers.cpp  session6polymorphisme.cpp  uitlegMarc
CSD2a/C++2b/: HelloWorld.cpp
CSD2a/exercisé/: exercise3_deviationcounter_r1.py
CSD2a/irregular beat generator/: algoseq.py  algoseq_r2.py  algoseqsub.py  readme
CSD2a/multi sample player/: poly_r5.py  poly_r6.py  run_sample_r5.py  run_sample_r6.py
CSD2a/sandbox\experiments/: GCDLCM  Imaginaryi  NameSpace.cpp  algobeater.py  (+3 more)
CSD2b/: C++!.cs  CMakeLists.txt  delegating_constructor.cpp  oscillator.h
CSD2b/JuceTest000002/: CMakeLists.txt
SC/: Les1.scd
python_basics/: .helloworld.py.swp  Loop_exercise.py  eindopdracht_bramLaman_2425.py  empty_list_exercise.py  fill_measure_with_events.py  generated_sequence.mid  helloworld.py  multi_sample_event_sequencer.py  multi_sample_event_sequencer_threaded.py  playsound.py  playsound_.py  ritmischeplayer.py  run_sample.py  run_sample_r2.py  schets_eindopdracht_1.py  schets_eindopdracht_2.py  schets_eindopdracht_3.py  schets_eindopdracht_4.py  schets_experiment_eindelozevariatie_eindopdracht_1.py  sequence.mid  sequence_output.mid  singlesamplesequencer.py  symmetrie_eind_concept.py  time_stamps=[].py  voordelenNadelen  voordelenNadelen.txt
(+45 files in other folders)
